--- a/src/Spotify/ContextualMenu/ContextualMenu.css
+++ b/src/Spotify/ContextualMenu/ContextualMenu.css
@@ -19,12 +19,13 @@ ul{
 }
 
 li{
-    height:30px;
+    height:40px;
     padding-left: 20px;
     padding-bottom: 4px;
     display:flex;
     align-items: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 li:hover{
